# brick-breaker

./: .gitignore  CMakeLists.txt  Makefile  README.md  brick_breaker.c
assets/: config.json
include/: Ball.h  Brick.h  Game.h  Paddle.h  PowerUp.h
src/: Ball.cpp  Brick.cpp  Game.cpp  Paddle.cpp  PowerUp.cpp  main.cpp
tests/: CollisionTest.cpp
